docs(research): enrich jgc-research with JDK 25 generational GC transition and college cross-links
Tenth bucket of the research-catalog enrichment mission.

Adds Section 17 "Addendum: The JDK 25 LTS generational transition
(2025-2026)" to collectors.md covering:
- JDK 25 LTS (Sept 16 2025) ships Generational ZGC as the *only* ZGC
  flavor (non-generational removed). 0.1-0.5ms pauses regardless of
  heap size. 15-30% memory overhead, 5-10% CPU overhead vs G1.
- Generational Shenandoah promoted out of experimental status, now
  default when -XX:+UseShenandoahGC selected. 1-10ms pause range,
  lower memory footprint than ZGC.
- G1 remains sensible default; decision is now a three-way Pareto
  (G1 / ZGC / Shenandoah), not the old binary throughput-vs-latency
- The "throughput gap" framing from Section 16 can now be revised —
  gap has narrowed substantially

Adds College Departments cross-link section to engineering, coding,
mathematics, cloud-systems.

6 sources cited.